--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test":"echo noTestSpecified"
+    "test": "echo noTestSpecified"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -12,6 +12,10 @@
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "pg": "^7.10.0"
+  },
+  "engines": {
+    "node": "10.x15.x"
   }
 }
