--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "pg": "^7.10.0"
+    "pg": "^7.10.0",
+    "sjcl": "^1.0.8"
   },
   "engines": {
     "node": "10.15.x"
